--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 			<!--<artifactId>mysql-connector-java</artifactId>-->
 			<!--<scope>runtime</scope>-->
 		<!--</dependency>-->
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>3.0.1</version>
+		</dependency>
 
 	</dependencies>
 
